...
                mapSection
                    .tag(3)
                favoritesSection
                    .tag(4)
            }
            .tabViewStyle(.page)
            .accessibility(identifier: "onboardingView")
            VStack {
                Spacer()
                bottomButton.accessibility(identifier: "onboardingBottomButton")
            }
            .padding(.bottom, 50)
            .padding([.trailing, .leading], 30)
        }.onAppear {
            registerScreen(view: "OnboardingView")
        }
...
