...
            }
            .navigationBarTitle("Líneas", displayMode: .large)
            #if XCTEST
                .toolbar {
                    ToolbarItem {
                        Image(systemSymbol: .rosette)
                            .accessibility(identifier: "developerSettingsButton")
                            .onTapGesture {
                                showDeveloperSettings.toggle()
                            }
                    }
                }
            #endif
...
