...
                UserDefaults.standard.removeObject(forKey: "cardID")
            } label: {
                Image(systemSymbol: .trashFill)
                    .font(.title2)
                    .padding()
            }
        }.accessibility(identifier: "cleanCardStorage")
    }

    private var infoRow: some View {
        HStack {
            Text("Info")
                .font(.body)
...
                    }
                }
            } label: {
                Image(systemSymbol: .trashFill)
                    .font(.title2)
                    .padding()
            }.accessibility(identifier: "cleanCoreData")
        }
    }

    private var crashRow: some View {
        HStack {
            Text("Crash the app")
...
